--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,14 @@ dependencies = [
   "matplotlib>=3.5.3",
   "tqdm>=4.65.2",
   "scipy>=1.7.3",
-  "moge",
   "tyro>=0.9.32",
   "tensorboard>=2.20.0",
   "ipykernel>=6.30.1",
+]
+
+[project.optional-dependencies]
+depth = [
+  "moge",
 ]
 description = "PDFNet: Patch-Depth Fusion for Dichotomous Image Segmentation"
 name = "pdfnet"
@@ -68,7 +72,11 @@ torch = [
 torchvision = [
   {index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'"},
 ]
-moge = { git = "https://github.com/microsoft/MoGe.git", subdirectory = ".", rev = "main" }
+
+[tool.uv.sources.moge]
+git = "https://github.com/microsoft/MoGe.git"
+subdirectory = "."
+rev = "main"
 
 [[tool.uv.index]]
 explicit = true
